package warikan.domain.party;

import lombok.RequiredArgsConstructor;
import lombok.ToString;

/** 名前 */
@RequiredArgsConstructor
@ToString
public class Name {

    private final String value;
}